# firefly-main

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  diagram.json  partitions.csv  wokwi.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: display.rs  error.rs  lib.rs  main.rs  psram.rs  v1.rs  v2.rs
src/display/: color.rs  commands.rs  display.rs  mod.rs  writer.rs
