[package]
name = "firefly-main"
version = "0.1.0"
rust-version = "1.89.0"
edition = "2024"

[dependencies]
firefly-hal = "0.3.0"
firefly-runtime = { path = "../firefly/firefly-runtime" }
esp-backtrace = { version = "0.17.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "1.0.0-rc.0", features = [
    "esp32s3",
    "psram",
    "unstable",
] }
esp-println = { version = "0.15.0", features = [
    "esp32s3",
    "uart",
], default-features = false }
esp-alloc = "0.8.0"
critical-section = "1.2.0"
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.3.0"
embedded-sdmmc = { version = "0.9.0", default-features = false }


[patch.crates-io]
# firefly-types = { path = "../firefly-types" }
firefly-hal = { path = "../firefly-hal" }

[profile.release]
strip = true             # Automatically strip symbols from the binary.
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "z"          # Optimize for size.
overflow-checks = false
panic = "abort"
