[package]
name = "firefly-main"
version = "0.1.0"
rust-version = "1.89.0"
edition = "2021"

[dependencies]
firefly-hal = "0.3.3"
firefly-runtime = "0.10.1"
esp-backtrace = { version = "0.18.1", features = [
    "esp32s3",
    "panic-handler",
    "println",
] }
esp-hal = { version = "1.0.0", features = ["esp32s3", "psram", "unstable"] }
esp-println = { version = "0.16.1", features = [
    "esp32s3",
    "uart",
], default-features = false }
esp-alloc = "0.9.0"
critical-section = "1.2.0"
embedded-graphics = "0.8.2"
embedded-hal-bus = "0.3.0"
embedded-sdmmc = { version = "0.9.0", default-features = false }

[patch.crates-io]
# firefly-types = { path = "../firefly-types" }
firefly-runtime = { path = "../firefly-runtime" }
firefly-hal = { path = "../firefly-hal" }

[features]
default = []
v1 = []
v2 = []

[profile.release]
strip = true             # Automatically strip symbols from the binary.
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "z"          # Optimize for size.
overflow-checks = false
panic = "abort"
