[package]
name = "firefly-main"
version = "0.12.0"
rust-version = "1.91.0"
edition = "2021"

[dependencies]
firefly-hal = "0.5.0"
firefly-runtime = "0.12.0"
esp-backtrace = { version = "0.19.0", features = [
    "esp32s3",
    "panic-handler",
    "println",
] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3"] }
esp-storage = { version = "0.9.0", features = ["esp32s3"] }
esp-hal = { version = "1.1.1", features = ["esp32s3", "unstable"] }
esp-println = { version = "0.17.0", features = [
    "esp32s3",
    "uart",
], default-features = false }
esp-alloc = "0.10.0"
critical-section = "1.2.0"
embedded-graphics = "0.8.2"
embedded-storage = "0.3.1"
embedded-hal-bus = "0.3.0"
embedded-sdmmc = { version = "0.9.0", default-features = false }

[patch.crates-io]
firefly-runtime = { path = "../firefly-runtime" }
firefly-hal = { path = "../firefly-hal" }
firefly-audio = { path = "../firefly-audio" }

[features]
default = []
v1 = []
v2 = []

[profile.release]
strip = true             # Automatically strip symbols from the binary.
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"          # Optimize for speed.
overflow-checks = false
panic = "abort"
